Sponsors page .entry-header spacing fix

--- a/style.css
+++ b/style.css
@@ -3302,6 +3302,7 @@ div.wp-block-button.has-custom-width.wp-block-button__width-100.featured-btn a.w
 }
 
 .page-id-341 #main .entry-header {
+	margin-top: 80px;
 	margin-bottom: 1rem;
 }
 
